kubernetes/apache-config.yaml
# This config file contains all config fields with comments
# NOTE: this is not a particularly useful config file
#
# (run) kubectl apply -f kubernetes/apache-config.yaml
# (run) kubectl rollout status deployment/mywebserver
# (run) kubectl edit deployment.v1.apps/mywebserver
# (run) kubectl rollout history deployment.v1.apps/mywebserver
# (run) kubectl expose deployment mywebserver --type=ClusterIP --name=mywebserver --port=80  --target-port=80
# (run) kubectl port-forward svc/mywebserver 8081:80
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywebserver
  namespace: default
  labels:
    k8s-app: apache2
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: apache2
  template:
    metadata:
      labels:
        k8s-app: apache2
    spec:
      containers:
      - name: apache2
        image: httpd
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - mountPath: /media
          name: apache2-volume1
      volumes:
      - emptyDir: {}
        name: apache2-volume1
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
