kubernetes/nginx-service.yaml
# This config file contains all config fields with comments
# NOTE: this is not a particularly useful config file
#
# (run) kubectl apply -f kubernetes/nginx-service.yaml
#
# Define 'Service' to expose FrontEnd Application
apiVersion: v1
kind: Service
metadata:
  name: myliteserver
  namespace: default
  labels:
    k8s-app: nginx
    tier: frontend
spec:
  selector: # pod labels should match these
    k8s-app: nginx
    tier: frontend
  ports:
  - name: http
    protocol: "TCP"
    port: 80
    targetPort: 80
  externalIPs:
    - 192.168.1.12
  type: LoadBalancer # ClusterIP or LoadBalancer, use NodePort if you are not running Kubernetes on Cloud
