kubernetes/using-loadbalancer.yaml
# To test the MetalLB setup and configuration.
#
# Deploy the Nginx pods <run> kubectl apply -f kubernetes/using-loadbalancer.yaml
# Deploy the Nginx pods <run> kubectl apply -f https://kind.sigs.k8s.io/examples/loadbalancer/usage.yaml
# Access the application <run> http://[your_nginx_service_external_ip]
# <run> LB_IP=$(kubectl get svc/foo-service -o=jsonpath='{.status.loadBalancer.ingress[0].ip}')
# should output foo and bar on separate lines 
#        for _ in {1..10}; do
#          curl ${LB_IP}:5678
#        done
#
kind: Pod
apiVersion: v1
metadata:
  name: foo-app
  labels:
    app: http-echo
spec:
  containers:
  - name: foo-app
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=foo"
---
kind: Pod
apiVersion: v1
metadata:
  name: bar-app
  labels:
    app: http-echo
spec:
  containers:
  - name: bar-app
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=bar"
---
kind: Service
apiVersion: v1
metadata:
  name: foobar-service
spec:
  type: LoadBalancer
  selector:
    app: http-echo
  ports:
  # Default port used by the image
  - port: 5678
