kubernetes/nginx-testlb.yaml
# To test the MetalLB setup and configuration.
#
# Deploy the Nginx pods <run> kubectl apply -f kubernetes/nginx-testlb.yaml
# Expose the Nginx pods <run> kubectl port-forward service/nginx-testlb 8081:80
# Expose the Nginx pods <run> kubectl port-forward deployment/nginx-testlb 8081:80
# Get the IP of the Nginx service <run> kubectl get svc -o wide
# Access the application <run> http://[your_nginx_service_external_ip]
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-testlb
  namespace: myspace
  labels:
    app: nginx
    component: testlb
spec:
  selector:
    matchLabels:
      app: nginx
      component: testlb
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
        component: testlb
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-testlb
  namespace: myspace
  labels:
    app: nginx
    component: testlb
spec:
  selector:
    app: nginx
    component: testlb
  ports:
  - name: http
    port: 8081
    protocol: TCP
    targetPort: 80
  type: LoadBalancer
  externalTrafficPolicy: Cluster
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress-egress
  namespace: myspace
  labels:
    app: nginx
    component: testlb
spec:
  podSelector:
    matchLabels:
      app: nginx
      component: testlb
  ingress:
  - {}
  egress:
  - {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: myspace
  labels:
    app: nginx
    component: testlb
#spec:
#  defaultBackend:
#    service:
#      name: nginx-testlb
#      port:
#        number: 80
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/testlb"
        backend:
          service:
            name: nginx-testlb
            port:
              number: 8081
